tests/ui/issues/issue-65131.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/issue-65131.rs:14:22
   |
LL |     get_pair(&mut x, &mut x);
   |     -------- ------  ^^^^^^ second mutable borrow occurs here
   |     |        |
   |     |        first mutable borrow occurs here
   |     first borrow later used by call

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
